--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,29 @@
     transform: rotate(360deg);
   }
 }
+
+.container{
+background-color:#f5f3f3;
+}
+
+.TextPost {
+  border-style: solid;
+}
+
+.VideoPost {
+  border-style: solid;
+}
+
+.ImagePost {
+  border-style: solid;
+}
+
+.btn {
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  padding: 12px 16px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
