--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,7 @@ background-color:#f5f3f3;
 .testimonial-group > .row > .col-2 {
   display: inline-block;
 }
+
+.commentBorder {
+  border-style: solid;
+}
