--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+body {
+  background-color: #292823;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -25,7 +29,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #1aa2cc;
 }
 
 @keyframes App-logo-spin {
@@ -54,7 +58,7 @@ background-color:#f5f3f3;
 }
 
 .btn {
-  background-color: DodgerBlue;
+  background-color: transparent;
   border: none;
   color: white;
   padding: 12px 16px;
