--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ background-color:#f5f3f3;
 }
 
 .btn {
-  background-color: transparent;
+  background-color: purple;
   border: none;
   color: white;
   padding: 12px 16px;
