--- a/src/App.css
+++ b/src/App.css
@@ -5,46 +5,20 @@
 body {
   background-color: #292833;
   color: #f5f1f1;
-  font-family: 'Overpass';
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282334;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #1aa2cc;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-family: "Overpass";
 }
 
 .container{
 background-color: #292833;
+}
+
+.Post {
+  border-style: solid;
+  border-radius: 5px;
+  border-color: #5F5177;
+  border-width: 2px;
+  padding-bottom: 0px;
+  padding-left: 20px;
 }
 
 .IconButton {
@@ -69,30 +43,11 @@ background-color: #292833;
   display: inline-block;
 }
 
-*:focus {
-  outline: none;
-}
-
-#searchBar {
-  color: #BF9AFC
-}
-
-.rbt-input-main, .rbt-input-main:focus, .rbt-input-hint, .rbt-menu {
-  color: #BF9AFC;
-  background-color: transparent;
-  border: none;
-}
-
-.rbt-input-main:focus, input:focus, textarea:focus, button:focus {
-  outline: none !important;
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
-}
-
-.rbt-menu {
-  background-color: #292833;
-  border: solid 2px #BF9AFC;
-}
-
-.dropdown-item:hover {
- background-color: #BF9AFC; 
+.commentBorder {
+  border-style: solid;
+  border-radius: 5px;
+  border-color: #5F5177;
+  border-width: 2px;
+  padding-bottom: 0px;
+  padding-left: 20px;
 }
