--- a/src/App.css
+++ b/src/App.css
@@ -5,20 +5,11 @@
 body {
   background-color: #292833;
   color: #f5f1f1;
-  font-family: "Overpass";
+  font-family: 'Overpass';
 }
 
 .container{
 background-color: #292833;
-}
-
-.Post {
-  border-style: solid;
-  border-radius: 5px;
-  border-color: #5F5177;
-  border-width: 2px;
-  padding-bottom: 0px;
-  padding-left: 20px;
 }
 
 .IconButton {
@@ -43,11 +34,30 @@ background-color: #292833;
   display: inline-block;
 }
 
-.commentBorder {
-  border-style: solid;
-  border-radius: 5px;
-  border-color: #5F5177;
-  border-width: 2px;
-  padding-bottom: 0px;
-  padding-left: 20px;
+*:focus {
+  outline: none;
+}
+
+#searchBar {
+  color: #BF9AFC
+}
+
+.rbt-input-main, .rbt-input-main:focus, .rbt-input-hint, .rbt-menu {
+  color: #BF9AFC;
+  background-color: transparent;
+  border: none;
+}
+
+.rbt-input-main:focus, input:focus, textarea:focus, button:focus {
+  outline: none !important;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
+}
+
+.rbt-menu {
+  background-color: #292833;
+  border: solid 2px #BF9AFC;
+}
+
+.dropdown-item:hover {
+ background-color: #BF9AFC; 
 }
