post body link to post

--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,13 @@ Input{
   overflow-wrap: break-word;
   display: block;
 }
+
+a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #ffffff;
+  text-decoration: none;
+}
