--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,14 @@
   text-align: center;
 }
 
+.signUpBackground {
+  background-color: transparent;
+  background-image: url(images/signup-background.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 body {
   background-color: #2A2A2D;
   color: #f5f1f1;
@@ -170,8 +178,9 @@ a:hover {
 } 
 
 .signUpCard {
-  margin: 200px;
-  max-width: 20%;
+  margin-top: 150px;
+  margin-bottom: 150px;
+  max-width: 50%;
   max-height: 100%;
   background-color: #2A2A2D;
   border-radius: 10px;
@@ -314,7 +323,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
   }
 
   .signUpCard {
-    max-width: 30%;
+    max-width: 60%;
   } 
 
   .loginCard {
