--- a/src/App.css
+++ b/src/App.css
@@ -314,6 +314,10 @@ Note: Beware of modifying this element as it can break the animations - you shou
   z-index: 9999999;
 }
 
+.bs-popover-auto[x-placement^=bottom] .arrow::after, .bs-popover-bottom .arrow::after {
+  border-bottom-color: #2A2A2D !important;
+}
+
 @media screen and (max-width: 1300px)
  
 {
